--- a/test/ingress-test/nginx-test/default.conf
+++ b/test/ingress-test/nginx-test/default.conf
@@ -4,15 +4,17 @@ server {
     server_name  localhost;
 
     #access_log  /var/log/nginx/host.access.log  main;
-
+    ## 인스레스 적용을 위해 주석
     #location / {
     #    root   /usr/share/nginx/html;
     #    index  index.html index.htm;
     #}
 
+    ## index 위치 지정하는 느낌
     root   /usr/share/nginx/html;
     index  index.html index.htm;
 
+    ## 인그레스 설정 경로 접속 시 index.html 경로 찾게 설정-> 안하면 404 에러뜸
     location /nh {
         alias   /usr/share/nginx/html;
     }
