--- a/test/ingress-test/hello-nh/deploymont-hello-nh.yaml
+++ b/test/ingress-test/hello-nh/deploymont-hello-nh.yaml
@@ -1,21 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx-test
+  name: deploymont-nh
   namespace: nh-name
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: nginx-test
+      app: hello-nh
   template:
     metadata:
       labels:
-        app: nginx-test
+        app: hello-nh
     spec:
       containers:
       - image: 52.79.48.121:30002/nh-project/nginx:v9
-        name: nginx-test
+        name: hello-nh
         ports:
         - containerPort: 4140
           protocol: TCP
