--- a/test/ingress-test/hello-nh/service-hello-nh.yaml
+++ b/test/ingress-test/hello-nh/service-hello-nh.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx-test-service
+  name: service-hello-nh
   namespace: nh-name
 spec:
   type: ClusterIP
@@ -10,4 +10,4 @@ spec:
     protocol: TCP
     targetPort: 4140
   selector:
-    app: nginx-test
+    app: hello-nh
