--- a/test/ingress-test/nginx-tomcat/default.conf
+++ b/test/ingress-test/nginx-tomcat/default.conf
@@ -3,21 +3,21 @@ server {
     listen  [::]:4140;
     server_name  localhost;
 
-    #access_log  /var/log/nginx/host.access.log  main;
-    ## 인스레스 적용을 위해 주석
+    # access_log  /var/log/nginx/host.access.log  main;
+    # 인스레스 적용을 위해 주석
     #location / {
     #    root   /usr/share/nginx/html;
     #    index  index.html index.htm;
     #}
 
-    ## index 위치 지정하는 느낌
+    # index 위치 지정하는 느낌
     root   /usr/share/nginx/html;
     index  index.html index.htm;
 
-    ## 인그레스 설정 경로 접속 시 index.html 경로 찾게 설정-> 안하면 404 에러뜸
+    # 인그레스 설정 경로 접속 시 index.html 경로 찾게 설정-> 안하면 404 에러뜸
     location /intra {
         alias   /usr/share/nginx/html;
-        proxy_pass http://tomcat-jsp-service:8080;
+        proxy_pass http://service-tomcat-intra:8080;
     }
 
     #error_page  404              /404.html;
